frostwire (5.0.8) stable; urgency=high

  * UX upgrade, playback support for m4a files.

 -- FrostWire Team <contact@frostwire.com>  Fri, 7 Jul 2011 14:20:58 -0500

frostwire (5.0.7) stable; urgency=high

  * UX upgrade, send file or send folder support when a file or folder
    is dropped on FrostWire.
  * UX upgrade, file choosing dialogs on Mac now also show mounted volumes.
  * UX bugfix, fixes possible UI freeze on startup.
  * UX bugfix, sending songs to iTunes is now done in a single process.

 -- FrostWire Team <contact@frostwire.com>  Mon, 4 Jul 2011 14:20:58 -0500

frostwire (5.0.6) stable; urgency=high

  * New feature, Send file. Available on File Menu and Transfer Manager.
  * New feature, Send folder. Available on File Menu and Transfer Manager.
  * UX upgrade, we now have a [+] icon next to search result file names to
    show partial download dialog.
  * UX upgrade, when a partial download is cancelled, the entry is removed
    from transfers.
  * UX update on partial download dialog. Includes new text filter.
  * UX fix, Library search now also looks for .torrents on "Torrents" folder.
  * UX fix, Mac OSX file menu does no longer show "Exit" action.
  * Fixes bug, incomplete files are no longer exported to iTunes playlist.
  * UX update, Help Menu now says "Sharing Help". Items rearranged.
  * UX update, rearranged View options into single panel.
  * UX update, torrent seeding settings are now a control of its own with
    an explanation of what seeding is.
  * UX update, the installation wizard now forces the user to decide if
    she wants to seed or not seed to continue. Links to what is seeding
    are in place.
  * UX update, in Windows and Linux, when the user Xs the window the user is
    explained that the application will be hidden and is given the option
    to exit.
  * UX bugfix, font size can now be increased.

 -- FrostWire Team <contact@frostwire.com>  Mon, 27 Jun 2011 10:57:00 -0500

frostwire (5.0.4) stable; urgency=high
