@@ -1,6 +1,7 @@
 frostwire (5.0.8) stable; urgency=high
 
   * UX upgrade, playback support for m4a files.
+  * UX upgrade, search result filters re-arranged.
 
  -- FrostWire Team <contact@frostwire.com>  Fri, 7 Jul 2011 14:20:58 -0500
 
